Fix logout route

--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -28,7 +28,7 @@
       </ul>
     <% else %>
       <ul>
-        <li><a href="/logout">logout</a></li>
+        <%= erb :'/sessions/_logout' %>
       </ul>
     <% end %>
   </div>
