--- a/app/views/users/new.erb
+++ b/app/views/users/new.erb
@@ -1,4 +1,4 @@
-<form method="post" action="/questions">
+<form method="post" action="/register">
   <input type="text" name="user[username]" placeholder="username">
   <input type="email" name="user[email]" placeholder="email">
   <input type="password" name="user[password]" placeholder="password">
