--- a/public/css/application.css
+++ b/public/css/application.css
@@ -9,3 +9,16 @@ li{
 form {
   padding: 10px;
 }
+
+.logout {
+  display: inline;
+}
+
+.logout input {
+  background: none!important;
+  border: none;
+  padding: 0!important;
+  font: inherit;
+  color: -webkit-link;
+  cursor: auto;
+}
