--- a/app/views/questions/show.erb
+++ b/app/views/questions/show.erb
@@ -1,10 +1,10 @@
 <div class="question">
   <% if @question %>
     <h1 class="title"><%= @question.title %></h1>
+    <%= @error %>
     <%= erb :'/partials/_vote_form', layout: false, locals: {question: @question} %>
     <br>
     <p class="content"><%= @question.content %></p>
-    <p><%= "points will go here" %> points</p>
     <p><a href="/questions/<%= @question.id %>/comments">Comments</a></p>
   <% end %>
 </div>
@@ -16,7 +16,7 @@
       <div class="answer-content">
         <p></p>
         <p class="content"><%= answer.content %></p>
-        <p class="points"><%= "points will go here" %> points</p>
+        <p class="points"><%= answer.points %> points</p>
         <p><a href="/answers/<%= answer.id %>/comments">Comments</a></p>
       </div>
     <% end %>
