--- a/public/css/application.css
+++ b/public/css/application.css
@@ -10,7 +10,7 @@ form {
   padding: 10px;
 }
 
-.answer-content {
+.answer-content, .comment-content {
   border: 5px solid black;
   border-radius: 10px;
   padding: 5px;
@@ -20,7 +20,7 @@ form {
   padding: 5px;
 }
 
-.answers {
+.answers, .comments {
   width: 90%;
   padding: 5px;
   margin: auto;
