--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -23,6 +23,7 @@
   <div class="sessions_menu">
     <% if !logged_in? %>
       <ul>
+        <li><a href="/questions">home</a></li>
         <li><a href="/login">login</a></li>
         <li><a href="/register">register</a></li>
       </ul>
