--- a/app/views/partials/_comment_form.erb
+++ b/app/views/partials/_comment_form.erb
@@ -1,6 +1,6 @@
 <div class="comment-container">
-  <form method="post" action="/questions/<%= question.id %>/comment">
-    <input type="text" name="comment" value="insert your comment here">
-    <button type="submit" name="submit_param" value="submit_value" class="fa fa-sort-desc add-comment"></button>
+  <form method="post" action="/questions/<%= question.id %>/comments">
+    <input type="text" name="comment" placeholder="comment">
+    <button type="submit" value="submit">submit</button>
   </form>
 </div>
