--- a/app/views/questions/comments.erb
+++ b/app/views/questions/comments.erb
@@ -1,4 +1,4 @@
 <%= erb :'questions/_question', locals: {question: @question} %>
 
-<%= erb :'partials/_comments', locals: {comments: @comments} %>
+<%= erb :'partials/_comments', locals: {comments: @comments, question: @question} %>
 <a href="/questions/<%= @question.id %>/answers">Go back to the answers.</a>
