--- a/public/css/application.css
+++ b/public/css/application.css
@@ -1,7 +1,12 @@
+body {
+  background-color: #fcf9e0;
+}
+
 .sessions_menu {
   float: right;
-  padding-right: 20px;
+  margin-right: 5%;
 }
+
 li{
   list-style: none;
 }
@@ -47,3 +52,18 @@ button {
   color: -webkit-link;
   cursor: auto;
 }
+
+header {
+  position: relative;
+  margin-top: 10px;
+  border-radius: 20px;
+  background-color: #42cbf4;
+  margin-right: 3%;
+  margin-left: 3%;
+}
+
+.logo {
+  margin-left: 5%;
+  font-size: 2.5em;
+}
+
