--- a/app/views/questions/show.erb
+++ b/app/views/questions/show.erb
@@ -1,4 +1,4 @@
-<%= erb :'questions/_question', locals: {question: @question} %>
+<%= erb :'questions/_question', locals: {question: @question, answers: @answers} %>
 
 <h4 class="answers">Answers</h4>
 <div class="answers">
