--- a/app/views/answers/_answer.erb
+++ b/app/views/answers/_answer.erb
@@ -2,7 +2,7 @@
   <% if answer %>
   <p class="post-info"><span class="points"><%= answer.points %> points</span> <span class="username">Posted by: <%= answer.answerer.username %></span></p>
   <br>
-  <%= erb :'/partials/_vote_form', locals: {answer: answer} %>
+  <%= erb :'/partials/_vote_form', layout: false, locals: {answer: answer} %>
   <p class="content"><%= answer.content %></p>
   <% if @answers %>
   <p><a href="/questions/<%= question.id %>/comments">Comments</a></p>
