--- a/app/views/partials/_question_form.erb
+++ b/app/views/partials/_question_form.erb
@@ -1,4 +1,4 @@
-<form method="post" action="/questions">
+<form method="post" action="/questions" class="new-question">
   <input type="text" name="title" placeholder="question">
   <input type="text" name="content" placeholder="content">
   <button type="submit">submit</button>
