Fix answer comments

--- a/app/views/partials/_comments.erb
+++ b/app/views/partials/_comments.erb
@@ -3,11 +3,12 @@
   <% if comments %>
   <% comments.each do |comment| %>
   <div class="comment-content" id="<%= comment.id %>">
+  <!-- TODO: fix this! /questions/1/comments doesnt work -->
     <p class="post-info"><span class="username">Posted by: <%= comment.commenter.username %></span></p>
     <p class="content"><%= comment.content %></p>
   </div>
   </br>
   <% end %>
   <% end %>
-    <%= erb :'/partials/_comment_form', locals: {question: question} %>
+    <%= erb :'/partials/_comment_form', locals: {question: @question} %>
 </div>
