--- a/app/views/_comment_form.erb
+++ b/app/views/_comment_form.erb
@@ -1,5 +1,5 @@
-<div class="comment-container">
-  <form method="post" action="/questions/<%= question.id %>/comments">
+<div class="container">
+  <form method="post" action="/questions/<%= question.id %>/<%= resource %>">
     <input type="text" name="comment" placeholder="comment">
     <button type="submit" value="submit">submit</button>
   </form>
