--- a/app/views/answers/comments.erb
+++ b/app/views/answers/comments.erb
@@ -1,4 +1,4 @@
 <%= erb :'answers/_answer', locals: {answer: @answer} %>
 
-<%= erb :'partials/_comments', locals: {comments: @comments} %>
+<%= erb :'/_comments', locals: {comments: @comments} %>
 <a href="/questions/<%= @question.id %>/answers" class="back">Go back to the answers.</a>
