--- a/app/views/_comments.erb
+++ b/app/views/_comments.erb
@@ -15,5 +15,10 @@
     </br>
     <% end %>
   <% end %>
-    <%= erb :'/_comment_form', locals: {question: @question, resource: 'comments'} %>
+  <div class="container">
+    <form method="post" action="/<%= post %>/<%= id %>/comments">
+      <input type="text" name="comment" placeholder="comment">
+      <button type="submit" value="submit">submit</button>
+    </form>
+  </div>
 </div>
